# lablab

./: .env.example  .gitignore  ACTION_PLAN.md  AGENTS.md  CODEBASE_REVIEW_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Chat.md  DECISAO_FINALIZADA.md  DECISION.md  EXECUTIVE_SUMMARY_OLD.md  GETTING_STARTED.md  Hello!.md  Hints and Tasklist.md  INTEGRATION_EXECUTIVE_SUMMARY.md  INTEGRATION_GUIDE.md  ISSUE_RESPONSE.md  LICENSE-APACHE  LICENSE-MIT  LogLine Discovery Lab.md  Merge-Dialogue.md  NEXT_STEPS.md  QUICK_REFERENCE.md  README.md  RESOLUTION_SUMMARY.md  SECURITY_SUMMARY.md  STATUS.md  STRATEGIC_ROADMAP.md  TASKLIST.md  WEEK1_COMPLETION.md  demo.sh
docs/: fold_contracts.md  fusion_plan.md  (+8 more)
logline_discovery/: .gitignore  CHANGELOG.md  COMPLETE_RAILWAY_ARCHITECTURE.md  Cargo.toml  Procfile  RAILWAY_DEPLOYMENT.md  README.md  SLACK_SETUP.md  railway.toml  release.toml  setup_env.sh  setup_slack_app.sh  slack-app-manifest.json  start_slack_bot.sh  triage_rules.toml
logline_discovery/binaries/director/: Cargo.toml
logline_discovery/binaries/director/src/: api.rs  fast_models.rs  function_calling.rs  intelligent_models.rs  lib.rs  personality.rs  rag.rs  rag_models.rs  simple_llm.rs  slack_bot.rs
logline_discovery/binaries/director/src/agents/: mod.rs
logline_discovery/binaries/director/src/chat/: mod.rs
logline_discovery/binaries/director/src/contracts/: mod.rs
logline_discovery/binaries/director/src/executor/: mod.rs
logline_discovery/binaries/director/src/labops/: mod.rs
logline_discovery/binaries/director/src/llm/: mod.rs
logline_discovery/binaries/director/src/observability/: mod.rs
logline_discovery/binaries/director/src/parser/: mod.rs  unified.rs
logline_discovery/binaries/director/src/policy/: mod.rs
logline_discovery/binaries/director/src/providers/: gemini.rs  mod.rs  ollama.rs  openai.rs
logline_discovery/binaries/director/src/timeline/: mod.rs
logline_discovery/binaries/director/src/tools/: mod.rs
logline_discovery/binaries/discovery_dashboard/: Cargo.toml  README.md  index.html  package.json  vite.config.ts
logline_discovery/binaries/discovery_dashboard/src/: App.vue  main.rs  main.ts  style.css
logline_discovery/binaries/hiv_discovery_runner/: Cargo.toml
logline_discovery/binaries/hiv_discovery_runner/src/: commands.rs  config.rs  db.rs  ledger.rs  main.rs  manuscript.rs  mapping.rs  pipeline.rs  service.rs  triage.rs  twin.rs
logline_discovery/binaries/job_client/: Cargo.toml
logline_discovery/binaries/job_client/src/: main.rs
logline_discovery/binaries/job_scheduler/: Cargo.toml
logline_discovery/binaries/job_scheduler/src/: main.rs
logline_discovery/binaries/job_worker/: Cargo.toml
logline_discovery/binaries/job_worker/src/: main.rs
logline_discovery/contracts/: discovery_lab_manifest.lll  hiv_cure_mission.lll  reservoir_map_experiment.lll
logline_discovery/contracts/folding/: demo_fold.lll
logline_discovery/crates/causal_engine/: Cargo.toml
logline_discovery/crates/causal_engine/benches/: ingest.rs
logline_discovery/crates/causal_engine/src/: lib.rs
logline_discovery/crates/common/: Cargo.toml
logline_discovery/crates/common/src/: config.rs  error.rs  job.rs  lib.rs  span.rs  triage.rs
logline_discovery/crates/core/: Cargo.toml
logline_discovery/crates/core/src/: folding_parser.rs  folding_ruleset.rs  folding_runtime.rs  lib.rs  micro_oscillator.rs  physics_bridge.rs  protein_state.rs  rotation_solver.rs  validation.rs
logline_discovery/crates/digital_twin_bridge/: Cargo.toml  README.md
logline_discovery/crates/digital_twin_bridge/src/: lib.rs
logline_discovery/crates/discovery_agent/: Cargo.toml
logline_discovery/crates/discovery_agent/src/: lib.rs  triage.rs
logline_discovery/crates/folding_runtime/: Cargo.toml
logline_discovery/crates/folding_runtime/src/: lib.rs
logline_discovery/crates/manuscript_generator/: Cargo.toml
logline_discovery/crates/manuscript_generator/src/: lib.rs
logline_discovery/crates/molecule/: Cargo.toml
logline_discovery/crates/molecule/src/: aminoacid.rs  bond_constraints.rs  chain.rs  dynamic_energy.rs  foldable_graph.rs  lib.rs  parameters.rs
logline_discovery/crates/span_ingestor/: Cargo.toml
logline_discovery/crates/span_ingestor/src/: lib.rs
logline_discovery/crates/spans_core/: Cargo.toml
logline_discovery/crates/spans_core/src/: lib.rs
logline_discovery/crates/structural_similarity/: Cargo.toml
logline_discovery/crates/structural_similarity/src/: graphlet.rs  lib.rs  mapper.rs  stgnn.rs  stgnn_pytorch.py
logline_discovery/crates/time/: Cargo.toml
logline_discovery/crates/time/src/: entropy_meter.rs  lib.rs  ms_runtime.rs  rotation_clock.rs  span_graph.rs  trajectory.rs
logline_discovery/crates/warp_common/: Cargo.toml
logline_discovery/crates/warp_common/src/: lib.rs
logline_discovery/crates/warp_ledger_vault/: Cargo.toml
logline_discovery/crates/warp_ledger_vault/src/: cli.rs  runtime.rs  schema.rs
logline_discovery/crates/warp_span_fabricator/: Cargo.toml
logline_discovery/crates/warp_span_fabricator/src/: cli.rs  lib.rs  runtime.rs  schema.rs
logline_discovery/db/migrations/: 0001_init.sql  001_initial_job_queue.sql  002_add_pending_job_status.sql
logline_discovery/docs/: llm-unified-architecture.md  master_plan.md  task_backlog.md
logline_discovery/ledger/spans/: discovery.ndjson
logline_discovery/ledger/spans/folding/: gp41_folding.json
logline_discovery/manuscripts/: test_bundle.json
logline_discovery/modelfiles/: director-brain.modelfile  director-smart.modelfile
logline_discovery/notebooks/: hiv_landscape_2025.md
logline_discovery/samples/payloads/: causal_demo.json  demo_ledger.ndjson
logline_discovery/samples/spans/: analysis_chignolin.json  artifact_bundle.json  causal_demo.json  execution_chignolin.json  manuscript_chignolin.json  metric_chignolin.json  protocol_chignolin.json  subject_chignolin.json  twin_observation_digital.json  twin_observation_physical.json
logline_discovery/scripts/: build_partial_release.sh  build_release.sh  version_sync.sh
logline_discovery/tests/: pipeline.rs
(+38 files in other folders)
