[package]
name = "discovery_dashboard"
version = "0.1.0"
edition = "2021"
description = "Causal Chain Explorer web server"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing = { workspace = true }
tracing-subscriber = "0.3"
once_cell = { workspace = true }
