[package]
name = "hiv_discovery_runner"
version = "0.1.0"
edition = "2021"
description = "CLI orchestrator for the LogLine Discovery Lab"

[dependencies]
# Local crates
logline_common = { path = "../../crates/common" }
spans_core = { path = "../../crates/spans_core" }
span_ingestor = { path = "../../crates/span_ingestor" }
causal_engine = { path = "../../crates/causal_engine" }
discovery_agent = { path = "../../crates/discovery_agent" }
manuscript_generator = { path = "../../crates/manuscript_generator" }
digital_twin_bridge = { path = "../../crates/digital_twin_bridge" }
folding_runtime = { path = "../../crates/folding_runtime" }
folding_molecule = { path = "../../crates/molecule" }
folding_time = { path = "../../crates/time" }
warp_common = { path = "../../crates/warp_common" }
warp_ledger_vault = { path = "../../crates/warp_ledger_vault" }
folding_core = { path = "../../crates/core" }

# Workspace dependencies
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
tokio = { workspace = true }
sqlx = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
md5 = { workspace = true }
walkdir = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
once_cell = { workspace = true }
toml = { workspace = true }
