[package]
name = "causal_engine"
version = "0.1.0"
edition = "2021"
description = "Cross-domain causal inference over UniversalSpans"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
petgraph = { workspace = true }
rayon = { workspace = true }
spans_core = { path = "../spans_core" }
structural_similarity = { path = "../structural_similarity" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
