[package]
name = "digital_twin_bridge"
version = "0.1.0"
edition = "2021"
description = "Bidirectional twin orchestration for the Discovery Lab"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
spans_core = { path = "../spans_core" }
uuid = { workspace = true }

