[package]
name = "span_ingestor"
version = "0.1.0"
edition = "2021"
description = "Adapters that translate external data into UniversalSpan records"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
spans_core = { path = "../spans_core" }
