[package]
name = "structural_similarity"
version = "0.1.0"
edition = "2021"
description = "Graphlet, Mapper, and ST-GNN similarity scoring for spans"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
petgraph = { workspace = true }
rayon = { workspace = true }
spans_core = { path = "../spans_core" }
