[package]
name = "warp_ledger_vault"
version = "0.1.0"
edition = "2021"
description = "Ledger utilities from LogLine Warp"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, optional = true }
warp_common = { path = "../warp_common" }

[features]
default = []
cli = ["clap"]
